JSP vente article débutée

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,12 +32,22 @@
   
   <servlet>
   	<servlet-name>Inscription</servlet-name>
-  	<jsp-file>/WEB-INF/inscription.jsp</jsp-file>  	
+  	<jsp-file>/WEB-INF/user/inscription.jsp</jsp-file>  	
   </servlet>
   
   <servlet-mapping>
   	<servlet-name>Inscription</servlet-name>
   	<url-pattern>/inscription-utilisateur</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>ArticleVente</servlet-name>
+  	<jsp-file>/WEB-INF/article/vente.jsp</jsp-file>  	
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>ArticleVente</servlet-name>
+  	<url-pattern>/article-vente</url-pattern>
   </servlet-mapping>
 </web-app>
 
